--- a/AGDPMS.Shared/Components/Sale/SaleAdd.razor
+++ b/AGDPMS.Shared/Components/Sale/SaleAdd.razor
@@ -4,6 +4,8 @@
 @using AGDPMS.Shared.Models
 @using AGDPMS.Shared.Services 
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize(Roles = "Sale")]
 @inject NavigationManager NavManager
 @inject ISaleServices SaleService 
 
